smy2kkl2/smy2kkl2 - Copy/smy2kkl2/GpMessages/4662173227882700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: יום רביעי 10 ינואר 2024 14:16:50</msg><msg code="-2147467259" type="100">  File "C:\MDGISS\devs\smy2kkl\Scripts\‏‏smy_verification_param.py", line 357
    arcpy.AddMessage('#  5. Checking if forest stand address contain &lt;null&gt;
                                                                           ^
SyntaxError: EOL while scanning string literal
</msg><msg code="0" type="0">Failed script 1. Verification...</msg><msg code="-2147467259" type="100">Failed to execute (Verification).</msg><msg code="0" type="3">Failed at יום רביעי 10 ינואר 2024 14:16:50 (Elapsed Time: 0.15 seconds)</msg></messages>